--- a/src/styles/components/layout/Nav.css
+++ b/src/styles/components/layout/Nav.css
@@ -1,30 +1,86 @@
-nav {
+nav{
     background-color: #6da9ed;
-    margin-bottom: 20px;
 }
-nav ul {
+#menu{  
+    background-color: #6da9ed;
+    width: 100%;
+    margin-bottom: 10px;
+    text-align: center;
+    /*con max-height en 0 hace que no se vea, para luego hacerlo aparecer con la transición y aumentando a 26px en la otra clase*/
+    max-height: 0;
+    /* overflow hidden, es necesario para que el objeto no aparezca aunque tenga max-height 0*/
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+}
+
+#menu.mostrando {
+    max-height: 190px; /* Ajustar este valor según la altura máxima del menú */
+}
+
+.fondo-boton{
+    width: 100%;
+    background-color: #365475;
+}
+#boton-menu{
+    background-color: #6da9ed;
+    color: #fff;
+    font-size: 24px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+}
+#boton-menu img{
+    padding-right: 5px;
+}
+/* Rotar el icono de la hamburguesa al abrir el menú */
+#boton-menu span img.rotar{
+    transform: rotate(90deg);
+}
+
+#menu ul{
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
-}
-nav ul li {
-    flex-grow: 1;
+    flex-direction: column;
 }
 
-nav ul li a {
+#menu ul li a{
+    font-size: 18px;
     color: white;
     text-decoration: none;
-    padding: 3px 6px;
+    padding: 5px 0px;
+    border-bottom: 2px solid #5e95d4;
     display: block;
     text-align: center;
 }
-
-nav ul li a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+#menu ul li a:hover{
+    background-color: rgba(0,0,0,0.3);
 }
-
-nav ul li a.activo {
+#menu ul li a.activo{
     background-color: #4c76a5;
 }
 
+@media (min-width:650px){
+    /*elimino el botón del menu*/
+    .fondo-boton{
+        display:none;
+    }
+    #menu{
+        max-height: 30px;
+    }
+    #menu ul{
+        flex-direction: row;
+        justify-content:flex-start; 
+    }
+    #menu ul li{
+        /*con flex-grow se especifica el espacio que puede ocupar cada objeto en relación al espacio sobrante*/
+        flex-grow: 1;
+    }
+    #menu ul li a{
+        padding: 5px 6px;
+        border: 0px;
+    }
+
+}
