--- a/src/styles/components/pages/ContactoPage.css
+++ b/src/styles/components/pages/ContactoPage.css
@@ -1,4 +1,3 @@
-/*contacto*/
 .contacto{
     display: flex;
     flex-direction: column;
@@ -48,9 +47,14 @@
     font-size: 13px;
     margin-left: 20px;
 }
+.datos ul li a{
+    color: #2e64a1;
+    text-decoration: none;
+    margin: 0px 3px;
+}
+
 @media (min-width:650px){
     .contacto{
         flex-direction: row;
     }
 }
-/* fin Contacto */
